--- a/Task_1_part_1_Dzmitry_Khrapunou/NUnitTest/NUnitTest.csproj
+++ b/Task_1_part_1_Dzmitry_Khrapunou/NUnitTest/NUnitTest.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Task_1_part_1\Task_1_part_1.csproj" />
+    <ProjectReference Include="..\Task_1_part_2\Task_1_part_2.csproj" />
   </ItemGroup>
 
 </Project>
