task 2 part 2 + unittests were added

--- a/Task_2_Dzmitry_Khrapunou/NUnitTest/NUnitTest.csproj
+++ b/Task_2_Dzmitry_Khrapunou/NUnitTest/NUnitTest.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Task_2_Dzmitry_Khrapunou\Task_2_Part_1_Dzmitry_Khrapunou.csproj" />
+    <ProjectReference Include="..\Task_2_Part_2_Dzmitry_Khrapunou\Task_2_Part_2_Dzmitry_Khrapunou.csproj" />
   </ItemGroup>
 
 </Project>
